@@ -1,9 +1,12 @@
 
 PROG  = sourceview
 SOURCES = SourceViewTest.hs
+PACKAGES = sourceview
 
 $(PROG) : $(SOURCES)
-	ghc --make $< -o $@ $(HCFLAGS)
+	ghc --make $< -o $@ $(HCFLAGS) $(HCEXTRAFLAGS)
+
+HCEXTRAFLAGS = $(if $(HCNEEDSPACKAGE), $(addprefix -package ,$(PACKAGES)))
 
 clean:
 	rm -f $(SOURCES:.hs=.hi) $(SOURCES:.hs=.o) $(PROG)
